[package]
name = "blockchain-in-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
sha2 = "0.11.0-pre.4"
serde = { version = "1.0.217", features = ["derive"] }
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde_json = "1.0"
